--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@
 }
 
 .main-content {
-    background-image: url("twinkling%20star%20background.gif");
+    background-image: url("https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExdnZ4bmNpb2lzYmYwenhvYmJjN3l6eDZmOGYyNGthd3czbzd5Z3JwcCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/FlodpfQUBSp20/giphy.gif");
   
     margin-left: 0px;
     margin-right: 0px;
