--- a/style.css
+++ b/style.css
@@ -6,12 +6,12 @@
     src: url(RetroSailingDemo-0WneP.ttf)
 }
 
-* body {
+body {
     background: black;
 
 }
 
-* h1 {
+h1 {
     color: yellow;
     font-family: 'Courier New', Courier, monospace;   
    }
